--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
 
       - name: Unzip chords.zip
         run: |
-          powershell Expand-Archive -Path "chords_diagram/chords.zip" -DestinationPath "chords_diagram"
+          7z x "chords_diagram\chords.zip" -o chords_diagram" -y
           del chords_diagram\chords.zip
         shell: pwsh
 
