--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,7 +124,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ChordOPython-windows
-          path: .\ChordOPython-windows.zip
+          path: ChordOPython-windows.zip
 
   build-macos:
     runs-on: macos-14
